REOPENED285813
[GStreamer] http/wpt/mediarecorder/pause-recording.html fails
https://bugs.webkit.org/show_bug.cgi?id=285813
Summary [GStreamer] http/wpt/mediarecorder/pause-recording.html fails
Philippe Normand
Reported 2025-01-12 02:02:22 PST
:(
Attachments
Philippe Normand
Comment 1 2025-01-26 02:19:39 PST
EWS
Comment 2 2025-01-27 04:51:12 PST
Committed 289420@main (0f278769c3b9): <https://commits.webkit.org/289420@main> Reviewed commits have been landed. Closing PR #39566 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-27 04:53:08 PST
Philippe Normand
Comment 4 2025-01-27 04:55:48 PST
The "Pausing and resuming the recording should impact the video duration" test fails.
Note You need to log in before you can comment on or make changes to this bug.