Cherry-pick 289420@main (0f278769c3b9). https://bugs.webkit.org/show_bug.cgi?id=285813

REGRESSION(287950@main): [GStreamer] http/wpt/mediarecorder/pause-recording.html consistently times out
    https://bugs.webkit.org/show_bug.cgi?id=285813

    Reviewed by Xabier Rodriguez-Calvar.

    The test was timing out because it was expecting an EOS event to reach the sink of an already EOS'd
    pipeline. To prevent this from happening the recorder no longer does the wait if the EOS event
    wasn't successfully pushed in the pipeline.

    * LayoutTests/platform/glib/TestExpectations:
    * Source/WebCore/platform/mediarecorder/MediaRecorderPrivateGStreamer.cpp:
    (WebCore::MediaRecorderPrivateBackend::stopRecording):
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
    (webkitMediaStreamSrcSignalEndOfStream):
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.h:

    Canonical link: https://commits.webkit.org/289420@main

Canonical link: https://commits.webkit.org/282416.435@2.46-jan-2025-multimedia